# Yuvaan

./: .gitignore  Intelli-Credit-Presentation_The Sopranos.pptx  LICENSE  PROJECT_SUMMARY.md  README.md  aboutus.txt  config.yaml  main.py  main.txt  pyproject.toml  requirements.txt  run_demo.bat  run_demo.sh
.github/workflows/: ci.yml
data/mock_structured/: bank_statement.json  gst_data.json
docs/: architecture.md  evaluation_criteria.md  problem_solution.md  strategy.md  user_flow_and_mockups.md
frontend/: dashboard.html
src/ingestor/: circular_trading.py  gstr_reconciliation.py
src/recommendation_engine/: generate_cam.py
src/research_agent/: research_scraper.py
tests/: test_modules.py
utils/: __init__.py  config_loader.py  logger_setup.py
