[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelli-credit"
version = "1.0.0"
description = "AI-Powered Corporate Credit Decisioning Engine for Indian Banks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["credit", "lending", "ai", "fraud-detection", "gst", "india", "banking", "risk-assessment"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "shap>=0.43.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "vulture>=2.9.0",
]

[project.scripts]
intelli-credit = "main:main"

[project.urls]
Homepage = "https://github.com/Abhishekpalmain/Yuvaan"
Documentation = "https://github.com/Abhishekpalmain/Yuvaan#readme"
Repository = "https://github.com/Abhishekpalmain/Yuvaan.git"
"Bug Tracker" = "https://github.com/Abhishekpalmain/Yuvaan/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*", "utils*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md", "*.txt", "*.html", "*.bat", "*.sh"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 127
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info", ".venv", "venv"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "src.*"
ignore_errors = false
